# test3

./: Dockerfile  README.md  cookiepatcher.json  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: scheduled-check-settings.yml
bbb/: manage.py
bbb/bbb/: asgi.py  wsgi.py
bbb/bbb/settings/: __init__.py  development.py  production.py  test.py
bbbb/: manage.py
bbbb/bbbb/: asgi.py  wsgi.py
bbbb/bbbb/settings/: __init__.py  development.py  local.py  mysqltest.py  production.py  test.py
tools/check_settings/check_settings/: __main__.py  check_settings.py  detect_varnames.py
